--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     required
                   >
                     <option value="" selected disabled>
-                      Abrir para selecionar un estado.
+                      Selecionar un estado.
                     </option>
                   </select>
 
@@ -67,32 +67,10 @@
                     required
                   >
                     <option value="" selected disabled>
-                      Selecione un estado.
+                      Seleccionar un municipio.
                     </option>
                   </select>
                 </div>
-
-                <button type="submit" class="btn btn-primary">Ver</button>
-              </form>
-
-              <hr />
-
-              <form id="datapoints-input" class="mt-5">
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1"
-                    >Data points in JSON</label
-                  >
-                  <textarea
-                    rows="12"
-                    class="form-control"
-                    id="data"
-                    placeholder='[{"lat":"17.434167","lng":"-99.138611","value":"90"}]'
-                  > [{"lat":"17.434167","lng":"-99.138611","value":"90"},{"lat":"18.434167","lng":"-102.138611","value":"70"},{"lat":"25.67507","lng":"-100.31847","value":"50"}]</textarea>
-                </div>
-
-                <button type="submit" class="btn btn-primary mt-3">
-                  Load data points
-                </button>
               </form>
             </div>
           </div>
