--- a/index.html
+++ b/index.html
@@ -9,26 +9,7 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
-    <style>
-      #map {
-        width: 600px;
-        margin: 0 auto;
-        height: 378.16px;
-      }
-
-      canvas {
-        z-index: 100;
-        pointer-events: none;
-      }
-
-      #tt_sm_map {
-        z-index: 200 !important;
-      }
-
-      .sm_location_heatmap {
-        opacity: 0 !important;
-      }
-    </style>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <main role="main">
@@ -79,8 +60,9 @@
     </main>
 
     <!-- Simple Maps -->
-    <script src="mapdata.js"></script>
-    <script src="countrymap.js"></script>
+    <script src="./js/mapdata.js"></script>
+    <script src="./js/countrymap.js"></script>
+    <script src="./js/data.js"></script>
     <!-- HeatMap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/heatmap.js/2.0.0/heatmap.min.js"></script>
     <!-- Scripts -->
@@ -91,376 +73,6 @@
 
       const stateInput = document.querySelector("#stateInput");
       const townInput = document.querySelector("#townInput");
-
-      const data = [
-        {
-          city: "Monterrey",
-          lat: "25.6667",
-          lng: "-100.3000",
-          admin_name: "Nuevo León",
-          value: 36,
-        },
-        {
-          city: "Guadalupe",
-          lat: "25.6775",
-          lng: "-100.2597",
-          admin_name: "Nuevo León",
-          value: 47,
-        },
-        {
-          city: "Ciudad Apodaca",
-          lat: "25.7833",
-          lng: "-100.1833",
-          admin_name: "Nuevo León",
-          value: 37,
-        },
-        {
-          city: "San Nicolás de los Garza",
-          lat: "25.7500",
-          lng: "-100.2833",
-          admin_name: "Nuevo León",
-          value: 34,
-        },
-        {
-          city: "Ciudad General Escobedo",
-          lat: "25.7933",
-          lng: "-100.1583",
-          admin_name: "Nuevo León",
-          value: 12,
-        },
-        {
-          city: "Ciudad Benito Juárez",
-          lat: "25.6500",
-          lng: "-100.0833",
-          admin_name: "Nuevo León",
-          value: 43,
-        },
-        {
-          city: "Ciudad Santa Catarina",
-          lat: "25.6833",
-          lng: "-100.4500",
-          admin_name: "Nuevo León",
-          value: 35,
-        },
-        {
-          city: "García",
-          lat: "25.8167",
-          lng: "-100.5833",
-          admin_name: "Nuevo León",
-          value: 4,
-        },
-        {
-          city: "San Pedro Garza García",
-          lat: "25.6667",
-          lng: "-100.3000",
-          admin_name: "Nuevo León",
-          value: 19,
-        },
-        {
-          city: "Cadereyta Jiménez",
-          lat: "25.6000",
-          lng: "-100.0000",
-          admin_name: "Nuevo León",
-          value: 31,
-        },
-        {
-          city: "Valle Alto",
-          lat: "25.5667",
-          lng: "-100.2500",
-          admin_name: "Nuevo León",
-          value: 22,
-        },
-        {
-          city: "Linares",
-          lat: "24.8597",
-          lng: "-99.5679",
-          admin_name: "Nuevo León",
-          value: 31,
-        },
-        {
-          city: "Montemorelos",
-          lat: "25.1872",
-          lng: "-99.8267",
-          admin_name: "Nuevo León",
-          value: 28,
-        },
-        {
-          city: "Galeana",
-          lat: "24.8333",
-          lng: "-100.0667",
-          admin_name: "Nuevo León",
-          value: 29,
-        },
-        {
-          city: "Santiago",
-          lat: "25.4333",
-          lng: "-100.1333",
-          admin_name: "Nuevo León",
-          value: 37,
-        },
-        {
-          city: "Ciudad Sabinas Hidalgo",
-          lat: "26.5000",
-          lng: "-100.1833",
-          admin_name: "Nuevo León",
-          value: 12,
-        },
-        {
-          city: "Salinas Victoria",
-          lat: "25.9667",
-          lng: "-100.3000",
-          admin_name: "Nuevo León",
-          value: 29,
-        },
-        {
-          city: "Ciénega de Flores",
-          lat: "25.9500",
-          lng: "-100.1833",
-          admin_name: "Nuevo León",
-          value: 43,
-        },
-        {
-          city: "Ciudad Cerralvo",
-          lat: "26.0899",
-          lng: "-99.6147",
-          admin_name: "Nuevo León",
-          value: 40,
-        },
-        {
-          city: "General Bravo",
-          lat: "25.8000",
-          lng: "-99.1667",
-          admin_name: "Nuevo León",
-          value: 4,
-          description: "Ut non q<img src='https://picsum.photos/80'> uam quis nisl finibus mattis in sodales tortor. Fusce ut faucibus augue. Cras in urna sit amet quam dictum bibendum cursus at purus",        
-        },  
-        {
-          city: "Lampazos de Naranjo",
-          lat: "27.0250",
-          lng: "-100.5056",
-          admin_name: "Nuevo León",
-          value: 14,
-        },
-        {
-          city: "Mina",
-          lat: "26.0167",
-          lng: "-100.5167",
-          admin_name: "Nuevo León",
-          value: 14,
-        },
-        {
-          city: "Bustamante",
-          lat: "26.5333",
-          lng: "-100.5000",
-          admin_name: "Nuevo León",
-          value: 20,
-        },
-        {
-          city: "Iturbide",
-          lat: "24.7253",
-          lng: "-99.9000",
-          admin_name: "Nuevo León",
-          value: 38,
-        },
-        {
-          city: "General Zuazua",
-          lat: "25.8970",
-          lng: "-100.1082",
-          admin_name: "Nuevo León",
-          value: 40,
-        },
-        {
-          city: "Carmen",
-          lat: "25.9365",
-          lng: "-100.3640",
-          admin_name: "Nuevo León",
-          value: 19,
-        },
-        {
-          city: "Anáhuac",
-          lat: "27.2446",
-          lng: "-100.1323",
-          admin_name: "Nuevo León",
-          value: 27,
-        },
-        {
-          city: "Doctor Arroyo",
-          lat: "23.6721",
-          lng: "-100.1813",
-          admin_name: "Nuevo León",
-          value: 45,
-        },
-        {
-          city: "Hidalgo",
-          lat: "25.9833",
-          lng: "-100.4500",
-          admin_name: "Nuevo León",
-          value: 30,
-        },
-        {
-          city: "Pesquería",
-          lat: "25.7833",
-          lng: "-100.0537",
-          admin_name: "Nuevo León",
-          value: 10,
-        },
-        {
-          city: "Ciudad de Allende",
-          lat: "25.2869",
-          lng: "-100.0083",
-          admin_name: "Nuevo León",
-          value: 42,
-        },
-        {
-          city: "Hualahuises",
-          lat: "24.8858",
-          lng: "-99.6728",
-          admin_name: "Nuevo León",
-          value: 17,
-        },
-        {
-          city: "China",
-          lat: "25.7000",
-          lng: "-99.2345",
-          admin_name: "Nuevo León",
-          value: 36,
-        },
-        {
-          city: "Abasolo",
-          lat: "25.9460",
-          lng: "-100.3958",
-          admin_name: "Nuevo León",
-          value: 23,
-        },
-        {
-          city: "Marín",
-          lat: "25.8833",
-          lng: "-100.0333",
-          admin_name: "Nuevo León",
-          value: 24,
-        },
-        {
-          city: "General Zaragoza",
-          lat: "23.9732",
-          lng: "-99.7723",
-          admin_name: "Nuevo León",
-          value: 38,
-        },
-        {
-          city: "Ciudad General Terán",
-          lat: "25.2667",
-          lng: "-99.6833",
-          admin_name: "Nuevo León",
-          value: 25,
-        },
-        {
-          city: "Ciudad de Villaldama",
-          lat: "26.4995",
-          lng: "-100.4251",
-          admin_name: "Nuevo León",
-          value: 11,
-        },
-        {
-          city: "Vallecillo",
-          lat: "26.6603",
-          lng: "-99.9874",
-          admin_name: "Nuevo León",
-          value: 16,
-        },
-        {
-          city: "Agualeguas",
-          lat: "26.3167",
-          lng: "-99.5333",
-          admin_name: "Nuevo León",
-          value: 15,
-        },
-        {
-          city: "Mier y Noriega",
-          lat: "23.4225",
-          lng: "-100.1173",
-          admin_name: "Nuevo León",
-          value: 21,
-        },
-        {
-          city: "Los Ramones",
-          lat: "25.7000",
-          lng: "-99.6167",
-          admin_name: "Nuevo León",
-          value: 4,
-        },
-        {
-          city: "General Treviño",
-          lat: "26.2232",
-          lng: "-99.4850",
-          admin_name: "Nuevo León",
-          value: 0,
-          description: "Ut non q<img src='https://picsum.photos/80'> uam quis nisl finibus mattis in sodales tortor. Fusce ut faucibus augue. Cras in urna sit amet quam dictum bibendum cursus at purus",           
-        },    
-        {
-          city: "Los Herreras",
-          lat: "25.9080",
-          lng: "-99.4048",
-          admin_name: "Nuevo León",
-          value: 32,
-        },
-        {
-          city: "Doctor González",
-          lat: "25.8598",
-          lng: "-99.9441",
-          admin_name: "Nuevo León",
-          value: 38,
-        },
-        {
-          city: "Higueras",
-          lat: "25.9601",
-          lng: "-100.0152",
-          admin_name: "Nuevo León",
-          value: 36,
-        },
-        {
-          city: "Parás",
-          lat: "26.5001",
-          lng: "-99.5216",
-          admin_name: "Nuevo León",
-          value: 40,
-        },
-        {
-          city: "Aramberri",
-          lat: "24.1006",
-          lng: "-99.8181",
-          admin_name: "Nuevo León",
-          value: 19,
-        },
-        {
-          city: "Melchor Ocampo",
-          lat: "26.0550",
-          lng: "-99.5438",
-          admin_name: "Nuevo León",
-          value: 31,
-        },
-        {
-          city: "Los Aldamas",
-          lat: "26.0622",
-          lng: "-99.1956",
-          admin_name: "Nuevo León",
-          value: 22,
-        },
-        {
-          city: "Rayones",
-          lat: "25.0181",
-          lng: "-100.0732",
-          admin_name: "Nuevo León",
-          value: 6,
-        },
-        {
-          city: "Doctor Coss",
-          lat: "25.9333",
-          lng: "-99.1667",
-          admin_name: "Nuevo León",
-          value: 3,
-          description: "Ut non q<img src='https://picsum.photos/80'> uam quis nisl finibus mattis in sodales tortor. Fusce ut faucibus augue. Cras in urna sit amet quam dictum bibendum cursus at purus",        
-        },
-      ];
 
       createHeatmap(data, {
         // Container for render
